ed fixes, wrapped views more distinct

--- a/app/assets/stylesheets/droom/_ed.sass
+++ b/app/assets/stylesheets/droom/_ed.sass
@@ -99,6 +99,7 @@ span.note
   .placeholder
     color: $mid
     font-style: italic
+    margin-left: 8px
 
 .ed-image, .editing figure
   cursor: pointer
